Complete S12 D06+D10 behavioral versioning and snapshot diff API

--- a/docs/evidence/S12.md
+++ b/docs/evidence/S12.md
@@ -3,35 +3,66 @@
 ## Segment
 - ID: S12
 - Deliverable(s): D06+D10
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `src/versioning/__init__.py`
+  - `src/versioning/behavioral_diff.py`
+  - `src/api/app.py`
+  - `tests/versioning/test_behavioral_diff.py`
+  - `docs/versioning/BEHAVIORAL_VERSIONING.md`
+  - `Makefile`
 - Summary:
+  - Implemented behavioral versioning diff engine for manifest snapshots with compatibility classification.
+  - Added breaking/non-breaking change detection across capability contracts (required fields, protocols, side-effect changes, capability adds/removals).
+  - Added API endpoint for explicit version diff retrieval:
+    - `GET /v1/agents/{agent_id}/versions/{base_version}/behavioral-diff/{target_version}`
+  - Extended version list endpoint to include `behavioral_impact_from_previous` for each non-initial version.
+  - Added D06+D10 tests covering diff correctness, compatibility classification, and endpoint behavior.
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+make versioning-test
+pytest tests/integration -q
+pytest -q
 ```
 
 ## Test Results
 - Passed:
+  - `make versioning-test` -> `2 passed`
+  - `pytest tests/integration -q` -> `10 passed`
+  - Full suite `pytest -q` -> `64 passed`
 - Failed:
+  - None
 - Skipped:
+  - None
 
 ## Verification Evidence
 - API contract validation:
+  - Version diff endpoint returns deterministic JSON with `compatibility`, `risk_level`, and structured change lists.
+  - `/v1/agents/{agent_id}/versions` now includes per-version behavioral impact summaries.
 - Security validation:
+  - Behavioral diff is read-only and computed from stored manifests; no privileged mutation path added.
+  - Breaking-change classification surfaces protocol removals and side-effect escalation for operator review.
 - Cost/latency validation:
+  - Diff computation is in-memory over two manifest snapshots with bounded per-capability comparisons.
+  - No external network calls added to diff path.
 - Logs/screenshots:
+  - Verified via automated tests in `tests/versioning/test_behavioral_diff.py` and integration suite outputs.
 
 ## Known Risks
-- 
+- Diff scoring is heuristic-based and not yet calibrated with production regression outcomes.
+- Semantic behavior shifts not reflected in manifest schema (for example prompt-level logic changes) are not detected.
 
 ## Next Segment Handoff
-- Recommended next segment:
+- Recommended next segment: S13
 - Required context for next segment:
+  - Behavioral diff core: `src/versioning/behavioral_diff.py`
+  - Versioning API wiring: `src/api/app.py`
+  - Behavioral versioning docs: `docs/versioning/BEHAVIORAL_VERSIONING.md`
+  - Regression baseline after S12: `pytest -q` -> `64 passed`
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
