Complete S13 D14 lease-first acquisition and promotion controls

--- a/docs/evidence/S13.md
+++ b/docs/evidence/S13.md
@@ -3,35 +3,75 @@
 ## Segment
 - ID: S13
 - Deliverable(s): D14
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `src/lease/__init__.py`
+  - `src/lease/service.py`
+  - `src/api/models.py`
+  - `src/api/app.py`
+  - `tests/lease/test_lease_api.py`
+  - `docs/lease/LEASE_PROMOTION.md`
+  - `Makefile`
 - Summary:
+  - Implemented lease-first capability acquisition flow:
+    - create temporary leases with TTL
+    - inspect lease status
+    - promote lease to install
+  - Added promotion path controls:
+    - owner permission boundary
+    - explicit policy approval requirement
+    - attestation hash + signature validation
+    - TTL expiry enforcement before promotion
+  - Added dedicated API tests covering happy path and required guardrails.
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+make lease-test
+pytest tests/integration -q
+pytest -q
 ```
 
 ## Test Results
 - Passed:
+  - `make lease-test` -> `3 passed`
+  - `pytest tests/integration -q` -> `10 passed`
+  - Full suite `pytest -q` -> `67 passed`
 - Failed:
+  - None
 - Skipped:
+  - None
 
 ## Verification Evidence
 - API contract validation:
+  - Lease API surface available:
+    - `POST /v1/capabilities/lease`
+    - `GET /v1/capabilities/leases/{lease_id}`
+    - `POST /v1/capabilities/leases/{lease_id}/promote`
+  - Promotion returns installed capability reference and attestation metadata.
 - Security validation:
+  - Cross-owner promotion attempts are blocked (`403`).
+  - Promotion without policy approval or with invalid attestation data is blocked.
+  - Expired leases cannot be promoted (`400`).
 - Cost/latency validation:
+  - Lease/promotion checks are local deterministic validations with bounded computation.
+  - Lease TTL policy limits unbounded long-lived temporary access.
 - Logs/screenshots:
+  - All required paths validated in automated API tests (`tests/lease/test_lease_api.py`).
 
 ## Known Risks
-- 
+- Signature validation is deterministic local simulation and not backed by external key infrastructure yet.
+- Lease records are in-memory for current runtime process; distributed persistence is deferred.
 
 ## Next Segment Handoff
-- Recommended next segment:
+- Recommended next segment: S14
 - Required context for next segment:
+  - Lease/promotion core logic: `src/lease/service.py`
+  - Lease API wiring: `src/api/app.py` and `src/api/models.py`
+  - Guardrail and boundary tests: `tests/lease/test_lease_api.py`
+  - Regression baseline after S13: `pytest -q` -> `67 passed`
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
