--- a/docs/evidence/S14.md
+++ b/docs/evidence/S14.md
@@ -3,35 +3,70 @@
 ## Segment
 - ID: S14
 - Deliverable(s): D15
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `src/knowledge/__init__.py`
+  - `src/knowledge/service.py`
+  - `src/api/models.py`
+  - `src/api/app.py`
+  - `tests/knowledge/test_knowledge_api.py`
+  - `docs/knowledge/KNOWLEDGE_REGISTRY.md`
+  - `Makefile`
 - Summary:
+  - Implemented shared knowledge registry APIs for contribution, query, and cross-validation.
+  - Added poisoning defenses for malicious instruction-pattern content and oversize payloads.
+  - Added provenance integrity via deterministic SHA-256 provenance hashing.
+  - Added confidence decay and validator feedback weighting for trust-adjusted knowledge ranking.
+  - Added tests for poisoning defense, provenance integrity, and confidence decay/validation behavior.
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+make knowledge-test
+pytest tests/integration -q
+pytest -q
 ```
 
 ## Test Results
 - Passed:
+  - `make knowledge-test` -> `3 passed`
+  - `pytest tests/integration -q` -> `10 passed`
+  - Full suite `pytest -q` -> `70 passed`
 - Failed:
+  - None
 - Skipped:
+  - None
 
 ## Verification Evidence
 - API contract validation:
+  - Knowledge API endpoints implemented:
+    - `POST /v1/knowledge/contribute`
+    - `GET /v1/knowledge/query`
+    - `POST /v1/knowledge/validate/{entry_id}`
+  - Query responses include confidence and provenance hash metadata.
 - Security validation:
+  - Poisoning defense blocks prompt-injection patterns.
+  - Provenance hash is persisted per entry to preserve source-content integrity checks.
+  - Cross-validation history records validator identity and rationale.
 - Cost/latency validation:
+  - Query path uses bounded in-memory filtering and limit caps (`<=50`).
+  - Confidence decay reduces stale entry dominance without extra network calls.
 - Logs/screenshots:
+  - Verified via automated tests in `tests/knowledge/test_knowledge_api.py`; screenshots not required.
 
 ## Known Risks
-- 
+- Current poisoning detection uses pattern-based checks and will need expansion for broader adversarial input coverage.
+- Registry storage is in-memory for current runtime process and not yet replicated.
 
 ## Next Segment Handoff
-- Recommended next segment:
+- Recommended next segment: S15
 - Required context for next segment:
+  - Knowledge core logic: `src/knowledge/service.py`
+  - Knowledge API contracts: `src/api/app.py`, `src/api/models.py`
+  - Knowledge safeguards tests: `tests/knowledge/test_knowledge_api.py`
+  - Regression baseline after S14: `pytest -q` -> `70 passed`
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
