Complete S15 D16 billing metering reconciliation and refund flows

--- a/docs/evidence/S15.md
+++ b/docs/evidence/S15.md
@@ -3,35 +3,74 @@
 ## Segment
 - ID: S15
 - Deliverable(s): D16
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `src/billing/__init__.py`
+  - `src/billing/service.py`
+  - `src/api/models.py`
+  - `src/api/app.py`
+  - `tests/billing/test_billing_api.py`
+  - `docs/billing/BILLING_FLOW.md`
+  - `Makefile`
 - Summary:
+  - Implemented billing and settlement APIs for D16:
+    - subscription creation
+    - usage metering
+    - invoice generation
+    - invoice retrieval
+    - invoice reconciliation
+    - admin refund flow
+  - Added metered cost calculation (`quantity * unit_price`) and invoice line-item aggregation.
+  - Added reconciliation endpoint to verify computed vs stored invoice subtotals.
+  - Added refund guardrails:
+    - platform admin only
+    - no over-refund beyond invoice subtotal.
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+make billing-test
+pytest tests/integration -q
+pytest -q
 ```
 
 ## Test Results
 - Passed:
+  - `make billing-test` -> `2 passed`
+  - `pytest tests/integration -q` -> `10 passed`
+  - Full suite `pytest -q` -> `72 passed`
 - Failed:
+  - None
 - Skipped:
+  - None
 
 ## Verification Evidence
 - API contract validation:
+  - Billing API endpoints implemented and covered via API tests.
+  - Invoice payload includes line items, subtotal, refunded amount, due amount, and usage event references.
 - Security validation:
+  - Refund endpoint enforces billing admin role (`owner-platform`).
+  - Over-refund attempts are rejected (`400`).
 - Cost/latency validation:
+  - Metering accuracy validated against deterministic invoice math:
+    - `subscription + usage` subtotal checks.
+  - Reconciliation endpoint validates invoice consistency with `matched` + `delta_usd`.
 - Logs/screenshots:
+  - Billing API verification captured in `tests/billing/test_billing_api.py`; screenshots not required.
 
 ## Known Risks
-- 
+- Billing state is currently in-memory; persistent ledgering and multi-node consistency are deferred.
+- Currency handling is USD-only in this minimum implementation.
 
 ## Next Segment Handoff
-- Recommended next segment:
+- Recommended next segment: S16
 - Required context for next segment:
+  - Billing service core: `src/billing/service.py`
+  - Billing API contracts: `src/api/app.py`, `src/api/models.py`
+  - Billing verification tests: `tests/billing/test_billing_api.py`
+  - Regression baseline after S15: `pytest -q` -> `72 passed`
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
