S17: implement runtime policy engine v2 and secure sensitive docs

--- a/docs/evidence/S17.md
+++ b/docs/evidence/S17.md
@@ -3,35 +3,66 @@
 ## Segment
 - ID: S17
 - Deliverable(s): Runtime Policy Engine v2
-- Date:
+- Date: 2026-02-12
 
 ## Code Changes
 - Files changed:
+  - `.gitignore`
+  - `src/policy/__init__.py`
+  - `src/policy/runtime.py`
+  - `src/discovery/service.py`
+  - `src/api/models.py`
+  - `src/api/app.py`
+  - `src/delegation/service.py`
+  - `tests/policy/test_runtime_policy.py`
+  - `tests/discovery/test_discovery_api.py`
+  - `tests/delegation/test_delegation_api.py`
+  - `tests/lease/test_lease_api.py`
 - Summary:
+  - Implemented shared Runtime Policy Engine v2 with deterministic decision reports for discovery, delegation, and install/promotion paths.
+  - Integrated policy evaluation and audit output (`policy_decision`) into runtime endpoints and persisted delegation policy decisions in status records.
+  - Added trust floor + permission boundary policy checks for delegation and explicit approval checks for install promotion.
+  - Added S17 policy test suite plus endpoint coverage for allow/deny matrices and deterministic policy behavior.
+  - Hardened `.gitignore` and untracked sensitive planning artifacts and runtime telemetry from Git index (local files retained).
 
 ## Test Commands Executed
 ```bash
-# paste exact commands
+pytest tests/policy tests/discovery/test_discovery_api.py tests/discovery/test_load_sla.py tests/delegation/test_delegation_api.py tests/lease/test_lease_api.py tests/capability_search/test_openapi_contract.py -q
+pytest tests/integration/test_registry_api.py -q
 ```
 
 ## Test Results
 - Passed:
-- Failed:
-- Skipped:
+  - `22 passed` for policy/discovery/delegation/lease/capability-search contract suite
+  - `10 passed` for registry integration regression suite
+- Failed: `0`
+- Skipped: `0`
 
 ## Verification Evidence
 - API contract validation:
+  - Discovery and runtime response schema now include deterministic `policy_decision` object in all S17-targeted paths.
+  - Capability search contract test suite passed (`tests/capability_search/test_openapi_contract.py`).
 - Security validation:
+  - Delegation deny path verified for trust floor + permission boundary violations (`tests/delegation/test_delegation_api.py::test_policy_boundary_enforces_trust_and_permissions`).
+  - Lease promotion deny path verified for missing policy approval (`tests/lease/test_lease_api.py::test_lease_promotion_requires_policy_approval`).
 - Cost/latency validation:
+  - Discovery SLA mixed-load test still passes after policy integration (`tests/discovery/test_load_sla.py`).
+  - Budget guardrail policy checks verified for 80/100/120 thresholds in direct policy tests and delegation API tests.
 - Screenshots/log excerpts:
+  - `pytest ... -q` output: `22 passed in 0.86s`
+  - `pytest tests/integration/test_registry_api.py -q` output: `10 passed in 2.05s`
 
 ## Known Risks
--
+- Public-history risk remains for previously pushed sensitive files; this session removes them from current tracked state, but full historical purge requires history rewrite and force-push.
+- Delegation trust signal currently derives from mock capability dataset for runtime policy checks; production trust graph integration remains future work (S21).
 
 ## Next Segment Handoff
 - Recommended next segment: S18
 - Required context for next segment:
+  - Reuse `src/policy/runtime.py` decision schema and existing `policy_decision` response fields.
+  - Extend discovery output explainability (`why_selected`, `why_rejected`) without bypassing policy-first filtering.
+  - Maintain SLA budgets while adding ranking explainability benchmark harness.
 
 ## Mandatory Confirmation
-- [ ] `docs/agenthub-master-plan-v1.2.docx` updated
-- [ ] `docs/DELIVERABLE_LOG.md` updated
+- [x] `docs/agenthub-master-plan-v1.2.docx` updated
+- [x] `docs/DELIVERABLE_LOG.md` updated
